--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-DB_HOST=localhost
-DB_PORT=5432
-DB_USER=postgres
-DB_PASS=postgres
-DB_NAME=multimagem
+DB_HOST=
+DB_PORT=
+DB_USER=
+DB_PASS=
+DB_NAME=
 
-PORT=3000
+PORT=
 
-JWT_PASS=14125006806
+JWT_PASS=
